[package]
name = "rfs-webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
pretty_assertions = "1.4"
