[package]
name = "rfs-webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tokio = { version = "1.42", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "fs",
] }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
pretty_assertions = "1.4"


[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
