[package]
name = "rfs-webserver"
version = "0.1.0"
edition = "2024"
authors = ["tachibanayui", "shutano"]
repository = "https://github.com/tachibanayui/rfs-webserver"
homepage = "https://github.com/tachibanayui/rfs-webserver"
description = "a small Rust webserver built with axum that serves a seeded randomly generated virtual filesystem."
readme = "README.md"
license = "MIT"

[dependencies]
axum = "0.8"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
rand = "0.10.1"
rand_xoshiro = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tokio = { version = "1.42", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "fs",
] }
tokio-util = { version = "0.7", features = ["io"] }
fxhash = "0.2.1"
vecmap-rs = "0.2.4"
smallstr = { version = "0.3.1", features = ["union", "serde"] }
extension-trait = "1.0.2"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.profiling]
inherits = "release"
debug = true
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
